--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div
+        id="app"
+        class="flex flex-col items-center justify-center h-screen"
+    ></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
